testsuite/bad/bad026.jl
// Assigning double to int variable.

int main () {
 int x;
  x = 1.0;
 return 0 ;
}